<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kayip_v2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string-array name="ilan_turu">
        
        <item >Kayıp Bildirme</item>
        <item >Kayıp Bulma</item>
    </string-array>
    <string-array name="kayip_turu">
        <item >İnsan</item>
        <item >Hayvan</item>
        <item >Eşya</item>
    </string-array>
    
    <string name="hint_mail">E-mail</string>
    <string name="kaydol">Kaydol</string>
    <string name="hint_password">Şifre</string>
    <string name="hint_password2">Şifre(tekrar)</string>
    <string name="giris">Giriş</string>
     <string name="sifremi_unuttum">şifremi unuttum </string>
     <string name= "anasayfa" >Anasayfa</string>
	<style name="DefaultButtonText">
	   <item name="android:layout_width">fill_parent</item>
	    <item name="android:layout_height">wrap_content</item>
	    <item name="android:textColor">#979797</item>
	    <item name="android:gravity">center</item>
	    <item name="android:layout_margin">3dp</item>
	    <item name="android:textStyle">normal</item>
	    <item name="android:textSize">20sp</item>
	    <item name="android:shadowColor">#f9f9f9</item>
	    <item name="android:shadowDx">1</item>
	    <item name="android:shadowDy">1</item>
	    <item name="android:shadowRadius">1</item>
	</style>
	    <string name="sifre_degistir">Şifre değiştir</string>
	    <string name="eskisifre">Eski şifre:</string>
	    <string name="yenisifre">Yeni şifre:</string>
	    <string name="yenitekrar">Yeni Şifre(Tekrar):</string>
	    <string name="kaydet">Kaydet</string>
	    <string name="iptal">Iptal</string>
	    <string name="direktgiris">Giriş Yapmadan Devam Et</string>
	    <string name="kaybettim">Kaybettim</string>
	    <string name="buldum">Buldum</string>
	    <string name="kayipturu">Kayıp Türü:</string>
	    <string name="ozellestir">Profili Özelleştir</string>
	    
	        <string name="ilanturu">İlan Türü:</string>
	        <string name="resimsec">Galeriden Seç</string>
	        <string name="tarih">Tarih</string>
	        <string name="yer">Yer</string>
	        <string name="aciklama">Açıklama</string>
	        <string name="yeniFotografCek">Yeni Çek</string>
	        <string name="ara">Ara</string>
	        <string name="iletisimbilgileri">İletişim Bilgileri</string>
	        <string name="ilanlarim">İlanlarım</string>

</resources>
