<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Antique_White" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/linearlayout_bg"
        android:gravity="right"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/et_email_giris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_top_bg"
            android:drawableLeft="@drawable/email"
            android:ems="10"
            android:hint="@string/hint_mail"
            android:inputType="textEmailAddress"
            android:textColorHint="#bbbbbb" />

        <EditText
            android:id="@+id/et_sifre_giris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_top_bg"
            android:drawableLeft="@drawable/password"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColorHint="#bbbbbb" />

        <Button
            android:id="@+id/btn_giris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/button_default_bg"
            android:padding="10dp"
            android:text="@string/giris" />

        <TextView
            android:id="@+id/tv_Kaydol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kaydol"
            android:textSize="20sp" />
   
    </LinearLayout>

</RelativeLayout>
