<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/Antique_White">
    
       <EditText
        android:id="@+id/edit_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_topbottom_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_email"
        android:layout_alignParentRight="true"
        android:ems="10" />

    <EditText
        android:id="@+id/edit_yenisifre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_yenisifre"
        android:layout_below="@+id/text_yenisifre"
        android:layout_toLeftOf="@+id/button_iptal"
        android:background="@drawable/edittext_topbottom_bg"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/text_yenitekrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_yenisifre"
        android:layout_below="@+id/edit_yenisifre"
        android:layout_marginTop="21dp"
        android:text="@string/yenitekrar" />

    <EditText
        android:id="@+id/edit_yenitekrar"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_yenitekrar"
        android:background="@drawable/edittext_topbottom_bg"
        android:layout_below="@+id/text_yenitekrar"
        android:ems="10" />

    <Button
        android:id="@+id/button_iptal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edit_email"
        android:layout_below="@+id/edit_yenitekrar"
        android:text="@string/iptal" />

    <Button
        android:id="@+id/button_kaydet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_iptal"
        android:layout_alignBottom="@+id/button_iptal"
        android:layout_toLeftOf="@+id/button_iptal"
        android:text="@string/kaydet" />

    <EditText
        android:id="@+id/edit_eskisifre"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button_kaydet"
        android:layout_below="@+id/text_eskisifre"
        android:background="@drawable/edittext_topbottom_bg"
        android:ems="10" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_eskisifre"
        android:layout_alignParentTop="true"
        android:layout_marginTop="83dp"
        android:text="@string/hint_mail" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginTop="26dp"
        android:layout_toRightOf="@+id/text_yenitekrar"
        android:text="@string/sifre_degistir"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_email"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/text_yenisifre"
        android:src="@drawable/account_and_control" />

    <TextView
        android:id="@+id/text_eskisifre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_eskisifre"
        android:layout_below="@+id/text_email"
        android:layout_marginTop="18dp"
        android:text="@string/eskisifre" />

    <TextView
        android:id="@+id/text_yenisifre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_eskisifre"
        android:layout_below="@+id/edit_eskisifre"
        android:layout_marginTop="17dp"
        android:text="@string/yenisifre" />

</RelativeLayout>
