<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/Antique_White" >
      
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Antique_White"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dip" >

        <Button
            android:id="@+id/button_sifredegistir"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/list_image"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_default_bg"
            android:gravity="center"
            android:text="@string/sifre_degistir" />

        <ImageView
            android:id="@+id/list_image"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/account_and_control" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_sifredegistir"
            android:layout_alignBottom="@+id/button_sifredegistir"
            android:layout_marginLeft="17dp"
            android:layout_toRightOf="@+id/list_image"
            android:text="@string/hint_mail"
            android:textColor="#040404"
            android:textSize="15dip"
            android:textStyle="bold"
            android:typeface="sans" />
        
        </RelativeLayout>
        
        <TextView
            android:id="@+id/txt_ilanlarim"
            android:layout_width="144dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_default_bg"
            android:gravity="center"
            android:text="@string/ilanlarim"
            android:textSize="20sp" />
        
        <ListView
            android:id="@+id/list_ilanlar"
            android:layout_width="fill_parent"
            android:layout_height="398dp"
            android:divider="#b5b5b5"
            android:dividerHeight="1dp"
            android:background="@color/Antique_White"
            android:listSelector="@drawable/list_selector" />
        
    </LinearLayout>
    

</ScrollView>
